tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_boolean_1__case_exhaustiveness_boolean_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
class Boolean = true | false
let and (x: Boolean) (y: Boolean): Boolean =
  {x, y} .(
    -> { x = true, y = true } [ true ]
    -> _ [ false ]
    -> _ [ false ]
  )

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_boolean_1/case_exhaustiveness_boolean_1.kk:6:8
  │
6 │     -> _ [ false ]
  │        ^ Unreachable case
  │
  = This case is unreachable as it is already handled by previous cases.
